RecipeBookBackend/src/main/java/com/example/RecipeBook/errors/RecipeNotFoundException.java
package com.example.RecipeBook.errors;

public class RecipeNotFoundException extends RuntimeException{
    public RecipeNotFoundException() {
        super("No recipe found");
    }
}
